--- a/src/components/navbar/mobileMenu.module.css
+++ b/src/components/navbar/mobileMenu.module.css
@@ -9,8 +9,13 @@
     z-index: 50;
     display: flex;
     flex-direction: column;
-    background-color: var(--mobile-menu-bg);
+    background-color: var(--docs-color-background-100);
 }
+html[data-theme='dark']
+.mobileMenuOverlay {
+    background-color: var(--docs-color-background);
+}
+
 
 .mobileMenuHeader {
     display: flex;
