--- a/src/pages/frameworkGrid.module.css
+++ b/src/pages/frameworkGrid.module.css
@@ -5,10 +5,10 @@
     padding-right: 1rem; /* Equivalent to px-4 */
   }
   
-  @media (min-width: 768px) { /* md breakpoint */
+  @media (max-width: 768px) { /* md breakpoint */
     .gridSection {
-      padding-left: 2rem;  /* Equivalent to md:px-8 */
-      padding-right: 2rem; /* Equivalent to md:px-8 */
+      padding-left: 1.3rem;  /* Equivalent to md:px-8 */
+      padding-right: 1.3rem; /* Equivalent to md:px-8 */
     }
   }
   
@@ -25,7 +25,7 @@
     color: var(--ifm-heading-color); /* Equivalent to text-[--ifm-heading-color] */
   }
   
-  @media (min-width: 996px) { /* lg breakpoint (Docusaurus default) */
+  @media (max-width: 996px) { /* lg breakpoint (Docusaurus default) */
     .gridTitle {
       font-size: 1.875rem; /* Equivalent to lg:text-3xl */
       line-height: 2.25rem;/* Line height for lg:text-3xl */
@@ -48,19 +48,21 @@
     gap: 1.5rem; /* Equivalent to gap-6 */
   }
   
-  @media (min-width: 640px) { /* sm breakpoint */
-    .frameworkItemsGrid {
-      grid-template-columns: repeat(2, minmax(0, 1fr)); /* sm:grid-cols-2 */
-    }
-  }
   
-  @media (min-width: 996px) { /* lg breakpoint (Docusaurus default) */
+  
+  @media (max-width: 996px) { /* lg breakpoint (Docusaurus default) */
     .frameworkItemsGrid {
       grid-template-columns: repeat(3, minmax(0, 1fr)); /* lg:grid-cols-3 */
     }
   }
+
+  @media (max-width: 790px) { /* sm breakpoint */
+    .frameworkItemsGrid {
+      grid-template-columns: repeat(2, minmax(0, 1fr)) ; /* sm:grid-cols-2 */
+    }
+  }
   
-  @media (min-width: 1280px) { /* xl breakpoint */
+  @media (min-width: 1000px) { /* xl breakpoint */
     .frameworkItemsGrid {
       grid-template-columns: repeat(4, minmax(0, 1fr)); /* xl:grid-cols-4 */
     }
